--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "babel-eslint",
-  "version": "7.1.1",
+  "name": "babylon-eslint",
+  "version": "0.0.0",
   "description": "Custom parser for ESLint",
   "main": "index.js",
   "files": [
@@ -9,14 +9,16 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/babel/babel-eslint.git"
+    "url": "https://github.com/forivall/babylon-eslint.git"
   },
   "dependencies": {
     "babel-code-frame": "^6.16.0",
     "babel-traverse": "^6.15.0",
     "babel-types": "^6.15.0",
-    "babylon": "^6.13.0",
     "lodash.pickby": "^4.6.0"
+  },
+  "optionalDependencies": {
+    "babylon": "^6.13.0"
   },
   "scripts": {
     "bootstrap": "git submodule update --init && cd eslint && npm install",
@@ -28,15 +30,15 @@
     "preversion": "npm test",
     "changelog": "git log `git describe --tags --abbrev=0`..HEAD --pretty=format:' * %s (%an)' | grep -v 'Merge pull request'"
   },
-  "author": "Sebastian McKenzie <sebmck@gmail.com>",
+  "author": "J Klassen <forivall@gmail.com>",
   "license": "MIT",
   "engines": {
     "node": ">=4"
   },
   "bugs": {
-    "url": "https://github.com/babel/babel-eslint/issues"
+    "url": "https://github.com/forivall/babylon-eslint/issues"
   },
-  "homepage": "https://github.com/babel/babel-eslint",
+  "homepage": "https://github.com/forivall/babylon-eslint",
   "devDependencies": {
     "babel-eslint": "^7.0.0",
     "eslint": "^3.9.1",
